--- a/admin/assets/css/login2.css
+++ b/admin/assets/css/login2.css
@@ -128,7 +128,7 @@ a:hover {
   font-size: 1.2rem;
   outline: none;
   border: none;
-  background: #256092;
+  background: #ff8c69;
   cursor: pointer;
   transition: 0.5s;
   background-size: 200%;
